--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>My name is Maya@@@</h1>
+    <h1>My name is Maya Talab</h1>
+    <h1>Instagram: maya.talab</h1>
 </body>
 </html>
