--- a/index.html
+++ b/index.html
@@ -1,13 +1,174 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>My name is Maya Talab</h1>
-    <h1>Instagram: maya.talab</h1>
-</body>
+<html>
+	<head>
+		<title>HTML Cheat Sheet</title>
+	</head>
+	<body>
+		<a href="blog.html">Go To Blog</a>
+		<hr>
+		<!--This is a comment -->
+		<!--Headings-->
+		<h1>Heading One</h1>
+		<h2>Heading Two</h2>
+		<h3>Heading Three</h3>
+		<h4>Heading Four</h4>
+		<h5>Heading Five</h5>
+		<h6>Heading Six</h6>
+
+
+		<!-- Paragraphs-->
+		<p>
+			Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+			tempor <strong> incididunt ut labore</strong> et dolore magna aliqua. Ut enim ad minim veniam, <!-- "strong" puts emphasis on selected words and in this case it bolds the text-->
+			quis nostrud <em>exercitation ullamco</em> laboris nisi ut aliquip ex ea commodo <!-- "em" puts emphasis on selected words and in this case it bolds the text-->
+			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+		</p>
+		<p>
+			Lorem ipsum dolor sit amet, consectetur adipisicing elit, <a href="http://google.com" target="_blank"> sed do eiusmod </a> <!-- "a" creates a link for the selected words, "href" is the link that opens when the selected words are clicked, "target=_blank" makes the link open on another tab-->
+			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+		</p>
+		<!--Lists (2 types: ordered and uordered)-->
+		<!-- Unordered List-->
+		<!-- Displays with bullet points-->
+		<ul>
+			<li>List Item 1</li>
+			<li>List Item 2</li>
+			<li>List Item 3</li>
+			<li>List Item 4</li>
+		</ul>
+		<!-- Ordered List-->
+		<!-- Displays with numbers-->
+		<ol>
+			<li>List Item 1</li>
+			<li>List Item 2</li>
+			<li>List Item 3</li>
+			<li>List Item 4</li>
+		</ol>
+		<!--Tables-->
+		<table>
+			<thead>
+				<tr>
+					<th>NAME</th>
+					<th>EMAIL</th>
+					<th>AGE</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr>
+					<td>Maya Talab</td>
+					<td>talabmaya@gmail.com</td>
+					<td>19</td>
+				</tr>
+				<tr>
+					<td>Mayar Talab</td>
+					<td>mtalab@gmail.com</td>
+					<td>19</td>
+				</tr>
+				<tr>
+					<td>Saif Talab</td>
+					<td>saiftalab2003@gmail.com</td>
+					<td>18</td>
+				</tr>
+
+
+			</tbody>
+		</table>
+
+		<br>
+		<hr>
+		<br>
+
+		<!--Forms ( No functionality, just the look)-->
+		<form action="process.php" method="POST">
+			<div>
+				<label>First Name</label>
+				<input type="text" name="firstName" placeholder="Enter First Name">
+			</div>
+
+			<br>
+
+			<div>
+				<label>Last Name</label>
+				<input type="text" name="lastName" placeholder="Enter Last Name">
+			</div>
+
+			<br>
+
+			<div>
+				<label>Email</label>
+				<input type="email" name="email">
+			</div>
+
+			<br>
+
+			<div>
+				<label>Message</label>
+				<textarea name="message"></textarea>
+			</div>
+
+			<br>
+
+			<div>
+				<label>Gender</label>
+				<select name="gender">
+					<option value="Male">Male</option>
+					<option value="Female">Female</option>
+					<option value="Other">Other</option>
+				</select>
+			</div>
+
+			<br>
+
+			<div>
+				<label>Age:</label>
+				<input type="number" name="age" value="30">
+			</div>
+
+			<br>
+
+			<div>
+				<label>Birthday:</label>
+				<input type="date" name="birthday">
+			</div>
+
+			<br>
+
+			<input type="submit" name="submit" value="Submit">
+		</form>
+
+		<!-- Buttons-->
+		<button>Click Me</button>
+
+		<br>
+
+		<!--Images-->
+		<a href="sample1.jpg" target="_blank">
+			<img src="sample1.jpg" alt="My Sample Image">
+		</a>
+		<a href="download.jpg">
+			<img src="download.jpg" width="200">
+		</a>
+
+		<!-- Quotations-->
+		<blockquote cite="http://traversymedia.com">
+			Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+		</blockquote>
+
+		<p>The <abbr title="World Wide Web"> WWW</abbr> is awesome
+		</p>
+
+		<p> Learning from <cite>HTML crash course</cite></p>
+		<div style="margin.top: 500px"></div>
+	</body>
 </html>
