--- a/blog.html
+++ b/blog.html
@@ -3,7 +3,7 @@
 <head>
 	
 	<title>My Blog</title>
-	<meta name="description" content="Awesome blog by Maya Talab">
+	<meta name="description" content="Cool blog by Maya Talab">
 	<meta name="keywords" content="web design blog, web dev blog, talabmaya">
 	<style type="text/css">
 		#main-header{
